--- a/XF_ConsumindoWebAPI/XF_ConsumindoWebAPI/XF_ConsumindoWebAPI.csproj
+++ b/XF_ConsumindoWebAPI/XF_ConsumindoWebAPI/XF_ConsumindoWebAPI.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
   </ItemGroup>
 
